--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  drift: ^1.0.1
+  http: ^0.13.4
+  path: ^1.8.0
+  path_provider: ^2.0.0
+  provider: ^6.0.2
+  sqlite3_flutter_libs: ^0.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -36,6 +42,8 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  drift_dev: ^1.0.2
+  build_runner: 2.1.7
   flutter_test:
     sdk: flutter
 
