--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,17 +29,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.2
   drift: ^1.0.1
+  flutter_vector_icons: 1.0.0
+  geocoding: ^2.0.4
   http: ^0.13.4
+  image_picker: ^0.8.5
+  latlong2: 0.8.1
+  location: 4.3.0
   path: ^1.8.0
   path_provider: ^2.0.0
+  permission_handler: ^9.2.0
   provider: ^6.0.2
   sqlite3_flutter_libs: ^0.5.0
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  uuid: ^3.0.6
 
 dev_dependencies:
   drift_dev: ^1.0.2
