--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  connectivity: ^3.0.6
   cupertino_icons: ^1.0.2
+  device_info_plus: ^3.2.3
   drift: ^1.0.1
   flutter_vector_icons: 1.0.0
   geocoding: ^2.0.4
@@ -40,6 +42,7 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.0
   permission_handler: ^9.2.0
+  pin_code_fields: ^7.4.0
   provider: ^6.0.2
   sqlite3_flutter_libs: ^0.5.0
   uuid: ^3.0.6
