--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_vector_icons: 1.0.0
   geocoding: ^2.0.4
   http: ^0.13.4
+  image: ^3.1.3
   image_picker: ^0.8.5
   latlong2: 0.8.1
   location: 4.3.0
