--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^0.8.5
   latlong2: 0.8.1
   location: 4.3.0
+  package_info_plus: ^1.4.2
   path: ^1.8.0
   path_provider: ^2.0.0
   permission_handler: ^9.2.0
