--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   device_info_plus: ^3.2.3
   drift: ^1.0.1
+  flutter_map: ^0.14.0
   flutter_vector_icons: 1.0.0
   geocoding: ^2.0.4
   http: ^0.13.4
   image: ^3.1.3
   image_picker: ^0.8.5
+  intl: ^0.17.0
   latlong2: 0.8.1
   location: 4.3.0
   package_info_plus: ^1.4.2
